# rag-assistant-twitter-x-influencer-knowledge-base

./: COMMANDS.txt  DEPLOYMENT.md  README.md  main.py  project.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: api.py  config.py  embeddings.py  hallucination_detector.py  pipeline.py  rag.py  rag_langchain.py  routes.py  webui.py
app/static/: test.txt
app/static/lottie/: bg.json
app/templates/: about.html  history.html  how-it-works.html  index.html  updates.html
assets/: empty.json
data/processed/: processed.json
data/raw/: sample.json
frontend/: streamlit_app.py  theme.css
frontend/components/: ui.py
infra/: Dockerfile  cloudrun.md  docker-compose.yml  render.yaml  requirements.txt
models/vector_store/: manifest.json  matrix.npy  metadata.json
tests/: conftest.py  test_api.py  test_rag.py  test_routes.py  test_vector.py
