[project]
name = "twitter-influencer-assistant"
version = "0.1.0"
description = "RAG system for Twitter/X influencer knowledge base"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "==0.112.2"
uvicorn = "==0.30.6"
pydantic = "==2.8.2"
pytest = "==8.3.2"
httpx = "==0.27.0"
black = "==24.8.0"
isort = "==5.13.2"
mypy = "==1.11.1"
openai = "==1.52.2"
faiss-cpu = "==1.8.0.post1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
